<resources>
    <string name="app_name">dulcesPopayan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio_msg">Disfruta de una dulce guía conociendo Popayán</string>
    <string name="Quienes">Quienes somos ?</string>
    <string name="button">Encuentra tu recorrido</string>
    <string name="todo">TODO</string>
    <string name="session">Iniciar sesion</string>
    <string name="msgnosotros">Somos dulces tradicionales Popayán, déjate sorprender, te guiaremos por las rutas de mayor interés turístico en Popayán. Deléitate a lo largo de la ruta con los mejores y más deliciosos dulces tradicionales de la ciudad.</string>
    <string name="Datos">Eduar Ordoñez @Derechos Reservados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Rutas -->
    <string name="ubucacion">Tu ubicacion, tu recorrido</string>


</resources>